--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "react-spring": "^8.0.27",
+    "react-tinder-card": "^1.4.5",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
